# skidbladnir

./: .gitignore  AGTX_WEB_PROJECT_BRIEF.md  Cargo.toml  lefthook.yml  package.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-daemon-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-pty-process-management/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-websocket-streaming/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-frontend-kanban-board/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-task-detail-live-output/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-workflow-engine/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/agtx-core/: Cargo.toml
crates/agtx-core/src/: lib.rs  skills.rs
crates/agtx-core/src/config/: mod.rs
crates/agtx-core/src/db/: models.rs  schema.rs
crates/agtx-core/src/git/: mod.rs  operations.rs  provider.rs  worktree.rs
crates/agtx-core/src/tmux/: operations.rs
crates/agtx-core/tests/: workflow_core_tests.rs
crates/agtxd/: Cargo.toml
crates/agtxd/src/: config_watcher.rs  error.rs  lib.rs  logging.rs  main.rs  shutdown.rs  state.rs
crates/agtxd/src/api/: health.rs  mod.rs  projects.rs  sessions.rs  tasks.rs  workflow.rs  ws.rs
crates/agtxd/src/session/: manager.rs  metrics.rs  mod.rs  output.rs  types.rs
crates/agtxd/src/workflow/: artifacts.rs  mod.rs  transitions.rs
crates/agtxd/tests/: api_tests.rs  config_reload_tests.rs  logging_tests.rs  metrics_tests.rs  session_api_tests.rs  session_tests.rs  workflow_tests.rs  ws_tests.rs
src/: lib.rs  main.rs
src/tui/: app.rs  app_tests.rs  board.rs  input.rs  shell_popup.rs
tests/: db_tests.rs  git_tests.rs  shell_popup_tests.rs
web/: package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: app.css
web/src/lib/api/: client.ts  projects.ts  sessions.ts  tasks.ts  workflow.ts
web/src/lib/api/__tests__/: client.test.ts
web/src/lib/components/: Board.svelte  Column.svelte  CommandPalette.svelte  CreateTaskModal.svelte  DeleteConfirmModal.svelte  DetailPanel.svelte  DiffView.svelte  InputBar.svelte  NavBar.svelte  OutputView.svelte  PluginSelect.svelte  PrModal.svelte  PrTab.svelte  Sidebar.svelte  StatusDot.svelte  TabBar.svelte  TaskCard.svelte
web/src/lib/components/__tests__/: DiffView.test.ts
web/src/lib/stores/: commands.svelte.ts  projects.svelte.ts  tasks.svelte.ts  ui.svelte.ts  websocket.svelte.ts
web/src/lib/stores/__tests__/: projects.test.ts  tasks.test.ts  ui.test.ts  (+2 more)
web/src/lib/types/: index.ts
web/src/routes/: +layout.svelte  +page.svelte
