[workspace]
members = ["crates/agtx-core", "crates/agtxd"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
rusqlite = { version = "0.34", features = ["bundled"] }
directories = "6.0"
which = "7.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter", "registry"] }
tracing-appender = "0.2"
axum = { version = "0.8", features = ["tracing", "ws"] }
base64 = "0.22"
tower-http = { version = "0.6", features = ["trace", "timeout"] }
notify = "8"
pty-process = { version = "0.5", features = ["async"] }
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
procfs = "0.17"

[package]
name = "agtx"
version = "0.1.0"
edition = "2021"
description = "Terminal-native kanban board for managing coding agents"
authors = ["agtx contributors"]
license = "MIT"
repository = "https://github.com/yourusername/agtx"
keywords = ["tui", "tmux", "agents", "kanban", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Shared core library
agtx-core = { path = "crates/agtx-core" }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Async runtime
tokio = { workspace = true }

# Database
rusqlite = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
which = { workspace = true }
directories = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[features]
default = []
test-mocks = ["dep:mockall", "agtx-core/test-mocks"]

[dev-dependencies]
tempfile = "3"
mockall = "0.13"

[dependencies.mockall]
version = "0.13"
optional = true
