[package]
name = "agtxd"
version = "0.1.0"
edition = "2021"

[lib]
name = "agtxd"
path = "src/lib.rs"

[[bin]]
name = "agtxd"
path = "src/main.rs"

[dependencies]
agtx-core = { path = "../agtx-core" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
directories = { workspace = true }
pty-process = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
procfs = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio-test = "0.4"
